# cable_routing

./: .gitignore  .gitmodules  INSTALL.md  README.md  RESETS.md  USAGE_GUIDE.md  pyproject.toml  ziyang_NotReadable.py
cable_routing/: calibrate_external_cam.py  calibrate_intrinsic_cam.py  test_cam_to_interface.py
cable_routing/algo/: astar.py  astar_board_planner.py  astar_both_sides.py  levenshtein.py
cable_routing/camera/: zed_camera.py
cable_routing/configs/: config.py  config.yaml  envconfig.py
cable_routing/env/: cable_tracer_wrapper.py  dummy_env.py  env.py
cable_routing/handloom/: requirements.txt  setup.py
cable_routing/scripts/: analytic_regrasp_testing.py  cable_routing_pipeline.py  cable_routing_simple.py  cable_routing_test.py  cable_tracing.py  calibrate_external_cam.py  check_sample.py  collect_samples.py  display_cloud.py  estimate_cable_pose.py  estimate_cable_pose_brio.py  estimate_cable_pose_handloom.py  estimate_cable_pose_offline.py  estimate_clips_pose.py  estimate_clips_pose_brio.py  estimate_clips_pose_offline.py  goto_pose_by_brio.py  (+18 more)
correction_algorithm/: board_representation.py  error_detection_testing.py
data/: board_config.json
dependencies/dp_gs/: .gitignore  pyproject.toml
dependencies/dp_gs/dp_gs/dataset/: image_dataset.py  image_dataset_sim.py  utils.py
dependencies/dp_gs/dp_gs/policy/: diffusion_wrapper.py  model.py
dependencies/dp_gs/dp_gs/util/: args.py  engine.py  misc.py
dependencies/dp_gs/script/: inference.py  train.py
dependencies/dp_gs/test/: test_image_dataset.py
yumi_realtime/: simple_motions.py
(+99 files in other folders)
