[project]
name = "dp_gs"
version = "0.1.0"

dependencies=[
    "Pillow",
    "opencv-python",
    "tqdm", 
    "tensorboard",
    "scipy",
    "timm",
    "matplotlib", 
    "tyro", 
    "loralib",
    "h5py",
    "wandb",
    "mediapy",
    "kinpy",
    #"torch==2.5.1",
    #"torchvision==0.20.1", 
    #"diffusers==0.18.2", 
    "scikit-image==0.19.3", 
    "scikit-video==1.1.11", 
    "zarr==2.12.0", 
    #"numcodecs==0.10.2", 
    #"pygame==2.1.2", 
    "pymunk==6.2.1", 
    "gym==0.26.2", 
    "shapely==1.8.4",
    "nvidia-dali-cuda120",
    "av==13.1.0",
]

requires-python= ">=3.10"
[tool.setuptools.packages.find]
include = ["dp_gs"]